# polyp-segmentation

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  inference.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml  pylint.yml
data/: train.txt  val.txt
polypseg/models/: __init__.py  unet.py
polypseg/utils/: dataset.py  functional.py  general.py  losses.py  transforms.py
tools/: inference.py  main.py
