[project]
name = "Polyp Segmentation"
version = "0.0.1"
authors = [
    { name = "Yakhyokhuja Valikhujaev", email = "yakhyo9696@gmail.com" }
]
description = "Polyp segmentation using UNet"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }


[tool.usort]
first_party_detection = false

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ufmt]
excludes = [
    "docs/",
]

[build-system]

requires = ["setuptools", "wheel"]
