[metadata]
name = Polyp Segmentation
version = 0.0.1
author = Yakhyokhuja Valikhujaev
author_email = yakhyo9696@gmail.com
description = Polyp segmentation using UNet
readme = README.md
python_requires = >=3.10.9
license_file = LICENSE

[bdist_wheel]
universal=1

[pep8]
max-line-length = 120

[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 120
ignore = F401
per-file-ignores =
    __init__.py: F401, F403, F405

exclude = docs*

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
